--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -142,3 +142,98 @@
   width: 100%;
 }
 
+.editContainer {
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  padding: 5px;
+  margin-right: 10px;
+}
+.editText {
+  font-family: 'Thasadith', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: rgb(38, 42, 45);
+  padding: 5px;
+  resize: vertical;
+  width: 100%;
+  border-radius: 5px;
+}
+.btnContainer{
+  display: flex;
+  gap: 30px;
+  margin-left: 5px;
+}
+.editBtn, .cancelBtn{
+  width: 100px;
+  margin-top: 10px;
+  height: 34px;
+  padding: 5px 10px;
+  background: radial-gradient(circle at top, #ad3673 , #ffaab9);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  text-shadow: 2px 2px 4px black;
+  font-size: 16px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.462);
+  font-family: 'Thasadith', sans-serif;
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.editBtn:active, .cancelBtn:active{
+  transform: scale(.9);
+}
+
+.commentContainer{
+    display: flex;
+    flex-direction: column;
+    z-index: 0;
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
+.textComment{
+  font-family: 'Thasadith', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: rgb(38, 42, 45);
+  padding: 5px;
+  resize: vertical;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.commentBtnContainer{
+  display: flex;
+  gap: 30px;
+  margin-left: 5px;
+  padding-bottom: 10px;
+}
+
+.commentBtn, .cancelCommentBtn {
+  width: 100px;
+  margin-top: 10px;
+  height: 34px;
+  padding: 5px 10px;
+  background: radial-gradient(circle at top, #ad3673 , #ffaab9);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  text-shadow: 2px 2px 4px black;
+  font-size: 16px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.462);
+  font-family: 'Thasadith', sans-serif;
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.commentBtn:active, .cancelCommentBtn:active {
+  transform: scale(.9);
+}
+
+.errorText{
+  color: red;
+}
